Update assets and dashboard 22/4/2024

--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
     <title>MeetAndTidyWireframes</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="v-iAQdMdz4kZl40Uu-V8T_ZW6yOEzniH96obDQHdbmzS_xXygpp0WaM-JyTcrAfMNZuiNLxqoayZPgYKQzVnFA" />
+<meta name="csrf-token" content="Gtvve673Lg_fucU9JnTSA1qJVTpQxSA4jP3Y0NBPWfPGnZxBooNILeXpIh92nXhutlRijxuE2iRyal6O3MUK6Q" />
     
-    <link rel="stylesheet" href="assets/tailwind-553b0d0f2e51a4f3880e09d29de99f99f2285d218738232be9c9b6a8b953adf7.css" data-turbo-track="reload" />
+    <link rel="stylesheet" href="assets/tailwind-89a09963ceab875ab4470bfc5cd3cc521ad67dd63a0d14bcb2584ef19c855255.css" data-turbo-track="reload" />
 <link rel="stylesheet" href="assets/inter-font-8c3e82affb176f4bca9616b838d906343d1251adc8408efe02cf2b1e4fcf2bc4.css" data-turbo-track="reload" />
 
-    <link rel="stylesheet" href="assets/application-fe440406e54bdd95ec9046fd7f7b3f6803f9748857226012c8213a74c8350ae1.css" data-turbo-track="reload" />
+    <link rel="stylesheet" href="assets/application-cb402155fded5f217e3f2f67a5792046375dba9544d3ae64579efc19038bb15b.css" data-turbo-track="reload" />
     <script type="importmap" data-turbo-track="reload">{
   "imports": {
     "application": "/assets/application-37f365cbecf1fa2810a8303f4b6571676fa1f9c56c248528bc14ddb857531b95.js",
@@ -204,7 +204,7 @@
 </div>
 
     </div>
-    <footer class="bg-company-green bottom-0 text-center w-full">
+    <footer class="bottom-0 text-center w-full py-3">
   <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
     <div class="pb-6">
       <a href="about.html#" class="text-sm leading-6 text-gray-600 hover:text-gray-900">Blog</a>
