--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>MeetAndTidyWireframes</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="csrf-param" content="authenticity_token" />
-<meta name="csrf-token" content="6W0xX3sFn3iys9dDrVLtz0f1yK97yIWZWo5cmPWYlhKEeqTsKoIkqAgafXPKG5ZMhDiBuENsXLI0GkGft3Cfag" />
+<meta name="csrf-token" content="Y3EHvu8cG6ZvaqiTydadj_Mw_gRTocT39UxITujYdF6_N3SE42h9hFU6T7GZPzfiH-3JsRjgPusL284Q5FInRA" />
     
-    <link rel="stylesheet" href="assets/tailwind-553b0d0f2e51a4f3880e09d29de99f99f2285d218738232be9c9b6a8b953adf7.css" data-turbo-track="reload" />
+    <link rel="stylesheet" href="assets/tailwind-89a09963ceab875ab4470bfc5cd3cc521ad67dd63a0d14bcb2584ef19c855255.css" data-turbo-track="reload" />
 <link rel="stylesheet" href="assets/inter-font-8c3e82affb176f4bca9616b838d906343d1251adc8408efe02cf2b1e4fcf2bc4.css" data-turbo-track="reload" />
 
-    <link rel="stylesheet" href="assets/application-fe440406e54bdd95ec9046fd7f7b3f6803f9748857226012c8213a74c8350ae1.css" data-turbo-track="reload" />
+    <link rel="stylesheet" href="assets/application-cb402155fded5f217e3f2f67a5792046375dba9544d3ae64579efc19038bb15b.css" data-turbo-track="reload" />
     <script type="importmap" data-turbo-track="reload">{
   "imports": {
     "application": "/assets/application-37f365cbecf1fa2810a8303f4b6571676fa1f9c56c248528bc14ddb857531b95.js",
@@ -65,20 +65,24 @@
   </header>
 </div>
     <div class="container mx-auto mt-28 px-5 flex ">
-      <div class="w-full flex">
+      <div class="w-full">
   <div class="w-full">
-  <header class="text-center">
-    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-      <h1 class="text-6xl font-bold leading-tight tracking-tight text-gray-900">Investing in the planets future.</h1>
+  <section class="jumbotron"></section>
+  <header class="px-4 mx-auto max-w-screen-xl text-center py-24">
+    <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">Investing in the planets future.</h1>
+    <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
+    <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
+      <button class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center rounded-lg bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 dark:focus:ring-green-900">
+        Download the app
+      </button>
     </div>
   </header>
   <main>
-    <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
-    </div>
   </main>
 </div>
-  <div class="bg-white py-16 sm:py-24 lg:py-32">
+
+
+  <div class="newsletter w-full bg-white mb-10 rounded-xl py-16 sm:py-24 lg:py-32">
   <div class="mx-auto grid max-w-7xl grid-cols-1 gap-10 px-6 lg:grid-cols-12 lg:gap-8 lg:px-8">
     <div class="max-w-xl text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl lg:col-span-7">
       <h2 class="inline sm:block lg:inline xl:block">Want product news and updates?</h2>
@@ -98,7 +102,7 @@
 </div>
 
     </div>
-    <footer class="bg-company-green bottom-0 text-center w-full">
+    <footer class="bottom-0 text-center w-full py-3">
   <nav class="-mb-6 columns-2 sm:flex sm:justify-center sm:space-x-12" aria-label="Footer">
     <div class="pb-6">
       <a href="index.html#" class="text-sm leading-6 text-gray-600 hover:text-gray-900">Blog</a>
